# virtualQA

./: .gitignore  README.md  alita_mate.py  config.py  githubtester.py  out_report.xml  pyproject.toml  pytest_report.html  requirements.txt  test.py
bkup/: combined-openapi-spec.yaml  owner-controller-spec.yaml  pet-controller-spec.yaml  vet-controller-spec.yaml
gherkins/: OwnerManagement.feature  PetManagement.feature  VetManagement.feature  VisitManagement.feature  owner_management.feature  pet_management.feature  vet_management.feature  visit_management.feature
prompts_examples/: git2swagger.txt
restAPI_tests/: pytest.ini
restAPI_tests/test/: test_owner_management.py  test_pet_management.py  test_vet_management.py  test_visit_management.py
src/agents/api_spec_agent/: actions.py  agent.py
src/alita_qa/: git2swagger.py
src/alita_qa/agents/: create_and_run_tests.py  git2swag.py  swag2gherkin.py
src/alita_qa/agents/api_spec_agent/: actions.py  agent.py
src/alita_qa/agents/rest_api_test_agent/: actions.py  agent.py
src/alita_qa/agents/test_cases_from_swagger/: actions.py  agent.py
src/alita_qa/cli/: git2swag.py
src/alita_qa/tools/file/: __init__.py
src/alita_qa/tools/git/: __init__.py
swaggers/: owner-api-spec.yaml  owner-controller.yaml  pet-api-spec.yaml  pet-controller.yaml  vet-api-spec.yaml  vet-controller.yaml  visit-api-spec.yaml  visit-controller.yaml
